--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-
 rootProject.name = "Aston_HW_4_Fragments_20"
-include(":app")
- 
+include ':app'
